--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -46,3 +46,28 @@ Size 128 GiB on Standard SSD. This will be mounted at [path]``/var/cache``
 
 
 
+// I guess you do this in your Azure instance
+=== Network Configuration
+
+Created a separate private network.
+The IP range is `10.0.0.0/24`.
+// Where do you configure this?
+The {productname} Server will have the internal IP Address `10.0.0.4` and will be reachable from the outside with IP `10.89.171.101`.
+The firewall has been configured to only allow inbound for port `22`, `80`, and `443` to IP Address `10.0.0.4`.
+So if other servers are added in this network they cannot be reached from outside the network.
+Outbound is open from the private network.
+// Was does this mean?
+This should be restricted for other server in this private network.
+
+
+
+== Configuring SUSE Manager Server
+
+
+
+=== Before You Begin
+
+
+
+==== Network
+
