cont. with config

--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -88,3 +88,11 @@ For more information, see the documentation from Microsoft Azure.
 // hostname -i?
 ----
 echo "<ip_address> $(hostname -f) $(hostname)" >> /etc/hosts
+
+
+
+==== Disks
+
+For this configuration three extra data disks have been added.
+For Azure it is recommended not to use LVM.
+If more disk space is needed a disk can be extended in the Azure portal, and then the filesystem can be expanded with [command]``xfs_growfs``.
