--- a/modules/client-configuration/pages/using-ssm.adoc
+++ b/modules/client-configuration/pages/using-ssm.adoc
@@ -1,13 +1,8 @@
 [[using-ssm]]
 = Using the System Set Manager
 
-
-
-
-
-
 System Set Manager is used to administrate groups of systems, rather than performing actions on one system at a time.
-It works for both Salt and Traditional systems.
+It works for both Salt and traditional clients.
 
 For a complete list of the tasks that you can perform with the System Set Manager, see xref:reference:systems/ssm-menu.adoc[].
 
