--- a/modules/client-configuration/pages/tshoot-clients.adoc
+++ b/modules/client-configuration/pages/tshoot-clients.adoc
@@ -21,7 +21,7 @@ For more information and instructions, see xref:administration:tshoot-registercl
 
 == Mounting /tmp with noexec
 
-Salt runs remote commands from [filename]``/tmp`` of the client's filesystem.
+Salt runs remote commands from [filename]``/tmp`` on the client's filesystem.
 Therefore you must not mount [filename]``/tmp`` with the [option]``noexec`` option.
 
 
@@ -49,5 +49,5 @@ Open the [path]``/etc/apache2/ssl-global.conf`` configuration file, locate the [
 SSLProtocol all -SSLv2 -SSLv3
 ----
 
-This will need to be done manually on the Server, and with a Salt state on the Proxy.
+This will need to be done manually on the server, and with a Salt state on the Proxy.
 Restart the [systemitem]``apache`` service on each system after making the changes.
