--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -163,3 +163,11 @@ reboot
 
 
 
+=== Server Check
+
+After the server is rebooted, check that all filesystems are mounted and that postgrsql is running:
+
+----
+mount
+service postgresql status
+----
