include public-cloud-azure.adoc and cosmetic changes

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -16,6 +16,7 @@ ifndef::backend-pdf[]
 ** xref:kubernetes.adoc[Kubernetes]
 // Public Cloud
 ** xref:public-cloud.adoc[Public Cloud]
+*** xref:public-cloud-azure.adoc[]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
