--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -14,7 +14,8 @@ Image Resource::
 +
 
 The image is a pre-built image created by {suse}.
-It is based on JeoS, and SUSE Manager is pre-installed but not configured. Configuring SUSE Manager has to be done manually with {yast}.
+It is based on JeoS, and SUSE Manager is pre-installed but not configured.
+Configuring SUSE Manager has to be done manually with {yast}.
 
 VM (Virtual Machine)::
 Recommended VM size is `B2ms`. This contains:
@@ -133,7 +134,7 @@ rm -r /var/cache.old
 
 === Registration
 
-To be able to install updates, register {productname} against {scc} (SCC).
+To be able to install updates, register SUSE Manager against {scc} (SCC).
 On the command line, enter (replace [literal]``<mail-address>`` and [literal]``<registration code>`` with your data:
 
 ----
