--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -132,7 +132,7 @@ rm -r /var/cache.old
 
 
 
-=== Registration
+==== Registration
 
 To be able to install updates, register SUSE Manager against {scc} (SCC).
 On the command line, enter (replace [literal]``<mail-address>`` and [literal]``<registration code>`` with your data:
@@ -143,7 +143,7 @@ SUSEConnect -e <mail-address> -r <registration code>
 
 
 
-=== Install Additional Packages
+==== Install Additional Packages
 
 With [command]``zypper``, install the following packages:
 
@@ -153,7 +153,7 @@ zypper -n in spacecmd mlocate sysstat
 
 
 
-=== Update the Server with the Latest Patches and Reboot
+==== Update the Server with the Latest Patches and Reboot
 
 Apply the latest updates and reboot the server:
 
@@ -164,7 +164,7 @@ reboot
 
 
 
-=== Server Check
+==== Server Check
 
 After the server is rebooted, check that all filesystems are mounted and that postgrsql is running:
 
@@ -172,3 +172,9 @@ After the server is rebooted, check that all filesystems are mounted and that po
 mount
 service postgresql status
 ----
+
+
+
+
+=== SUSE Manager Configuration
+
