--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -176,5 +176,37 @@ service postgresql status
 
 
 
-=== SUSE Manager Configuration
+=== SUSE Manager Setup Configuration
 
+// REMARK Do we want to list the details here?  Or is such a general xref good enough?
+
+For the SUSE Manager setup configuration in general, see xref:installation:server-setup.adoc[], _procedure "{productname} Setup"_.
+
+Pay special attention to the following settings:
+
+. In the first dialog, select [guimenu]``Set up SUSE Manager from scratch``
+. In the next dialog, enter a valid mail address for the administrator
+. It is very important to remember the password given for SSL.
+Without this password no SUSE Manager Proxy Server can be installed and no other changes can be made to the certificate.
+For example, this certificate is eg used on all registered systems to communicate with SUSE Manager Server.
+. In the [guimenu]``Database Settings`` dialog, it is enough to provide a password.
+Make sure also to remember this password.
+
+With these settings the installation can be started.
+The installation will finish without further input.
+
+When the installation is finished, an administration user will be created automatically.
+For Azure the system administrator user is called [literal]``admin`` and the password is built as follows:
+
+. The first part can be found with:
++
+
+----
+azuremetadata --instance-name
+----
+. The second part is [literal]``-suma``
+
+Alternatively, you can check the [path]``/var/log/susemanager_firstuser.log`` file.
+
+This completes the installation of SUSE Manager.
+From now on the server behaves identical as a non-Azure SUSE Manager Server.
