--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -47,17 +47,17 @@ Size 128 GiB on Standard SSD. This will be mounted at [path]``/var/cache``
 
 
 
-// I guess you do this in your Azure instance
+// REMARK: I guess you do this in your Azure instance
 === Network Configuration
 
 Created a separate private network.
 The IP range is `10.0.0.0/24`.
-// Where do you configure this?
+// REMARK: Where do you configure this?
 The {productname} Server will have the internal IP Address `10.0.0.4` and will be reachable from the outside with IP `10.89.171.101`.
 The firewall has been configured to only allow inbound for port `22`, `80`, and `443` to IP Address `10.0.0.4`.
 So if other servers are added in this network they cannot be reached from outside the network.
 Outbound is open from the private network.
-// Was does this mean?
+// REMARK: Was does this mean?
 This should be restricted for other server in this private network.
 
 
@@ -86,7 +86,7 @@ For more information, see the documentation from Microsoft Azure.
 . On the command line, add the system to the [path]``/etc/hosts`` file; replace [literal]``<ip_address>`` with the IP address of the server:
 +
 
-// hostname -i?
+// REMARK: hostname -i?
 ----
 echo "<ip_address> $(hostname -f) $(hostname)" >> /etc/hosts
 ----
@@ -178,7 +178,7 @@ service postgresql status
 
 === SUSE Manager Setup Configuration
 
-// REMARK Do we want to list the details here?  Or is such a general xref good enough?
+// REMARK: Do we want to list the details here?  Or is such a general xref good enough?
 
 For the SUSE Manager setup configuration in general, see xref:installation:server-setup.adoc[], _procedure "{productname} Setup"_.
 
