fix itemized lists

--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -21,11 +21,11 @@ VM (Virtual Machine)::
 Recommended VM size is `B2ms`. This contains:
 +
 
-. 2 vCPUs
-. 8 GB RAM
-. Up to 4 data disks
-. Max IOPS 2400
-. Temporary storage disk of 16Gb.
+* 2 vCPUs
+* 8 GB RAM
+* Up to 4 data disks
+* Max IOPS 2400
+* Temporary storage disk of 16Gb.
 Data on this disk will be destroyed after the guest has been switched off.
 
 
@@ -72,7 +72,7 @@ This should be restricted for other server in this private network.
 
 ==== Network
 
-. DHCP must not set the host name.
+* DHCP must not set the host name.
 Check [path]``/etc/sysconfig/network/dhcp`` if `DHCLIENT_SET_HOSTNAME` is set to [literal]``no``.
 Change it if needed:
 +
@@ -80,10 +80,10 @@ Change it if needed:
 ----
 DHCLIENT_SET_HOSTNAME="no"
 ----
-. Create the needed DNS Zones in Azure first.
+* Create the needed DNS Zones in Azure first.
 For more information, see the documentation from Microsoft Azure.
 
-. On the command line, add the system to the [path]``/etc/hosts`` file; replace [literal]``<ip_address>`` with the IP address of the server:
+* On the command line, add the system to the [path]``/etc/hosts`` file; replace [literal]``<ip_address>`` with the IP address of the server:
 +
 
 // REMARK: hostname -i?
@@ -99,11 +99,11 @@ For this configuration three extra data disks have been added.
 For Azure it is recommended not to use LVM.
 If more disk space is needed a disk can be extended in the Azure portal, and then the filesystem can be expanded with [command]``xfs_growfs``.
 
-. Disk [path]``/dev/sda`` is partitioned in 4 partitions containing the OS.
-. Disk [path]``/dev/sdb`` is the temporary storage disk and should not be used.
-. Disk [path]``/dev/sdc`` will contain [path]``/var/lib/pgsql``
-. Disk [path]``/dev/sdd`` will contain [path]``/var/spacewalk``
-. Disk [path]``/dev/sde`` will contain [path]``/var/cache``
+* Disk [path]``/dev/sda`` is partitioned in 4 partitions containing the OS.
+* Disk [path]``/dev/sdb`` is the temporary storage disk and should not be used.
+* Disk [path]``/dev/sdc`` will contain [path]``/var/lib/pgsql``
+* Disk [path]``/dev/sdd`` will contain [path]``/var/spacewalk``
+* Disk [path]``/dev/sde`` will contain [path]``/var/cache``
 
 To create the need data disks use use this command sequence on the command line:
 
@@ -184,12 +184,12 @@ For the SUSE Manager setup configuration in general, see xref:installation:serve
 
 Pay special attention to the following settings:
 
-. In the first dialog, select [guimenu]``Set up SUSE Manager from scratch``
-. In the next dialog, enter a valid mail address for the administrator
-. It is very important to remember the password given for SSL.
+* In the first dialog, select [guimenu]``Set up SUSE Manager from scratch``
+* In the next dialog, enter a valid mail address for the administrator
+* It is very important to remember the password given for SSL.
 Without this password no SUSE Manager Proxy Server can be installed and no other changes can be made to the certificate.
 For example, this certificate is eg used on all registered systems to communicate with SUSE Manager Server.
-. In the [guimenu]``Database Settings`` dialog, it is enough to provide a password.
+* In the [guimenu]``Database Settings`` dialog, it is enough to provide a password.
 Make sure also to remember this password.
 
 With these settings the installation can be started.
@@ -198,13 +198,13 @@ The installation will finish without further input.
 When the installation is finished, an administration user will be created automatically.
 For Azure the system administrator user is called [literal]``admin`` and the password is built as follows:
 
-. The first part can be found with:
+* The first part can be found with:
 +
 
 ----
 azuremetadata --instance-name
 ----
-. The second part is [literal]``-suma``
+* The second part is [literal]``-suma``
 
 Alternatively, you can check the [path]``/var/log/susemanager_firstuser.log`` file.
 
