--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -82,7 +82,7 @@ include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 // Public Cloud
 
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
-
+include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
 // ISS
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
 
